Add pandas-based data generation for proper data science workflow
- Use pandas DataFrames for synthetic grid data generation
- Generate time-indexed data with proper datetime index
- Save both numpy arrays (backward compatibility) and DataFrames
- Include descriptive column names for each node/edge feature
- Add OPF targets generation for optimization use cases
- Enable pandas in requirements.txt for data manipulation

--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ cvxpy>=1.3
 statsmodels>=0.13
 scikit-learn>=1.3
 
-# Optional visualization
+# Data science and visualization
 pandas
 matplotlib
 networkx
