Fix remote deployment: Configure nginx proxy for API calls
- Add nginx proxy configuration to forward /api/ requests to backend
- Update frontend config to use relative URLs in production
- Enable CORS headers for remote API access
- Support both local development and remote deployment

--- a/config.example
+++ b/config.example
@@ -27,6 +27,8 @@ DEFAULT_EPOCHS=5
 BATCH_SIZE=32
 
 # For production deployment, set:
-# REACT_APP_API_URL=https://your-api-domain.com
+# For cloudflared deployment (same domain):
+# REACT_APP_API_URL=https://griddemo.fullstackbuilder.de
+# Or leave empty to use relative URLs with nginx proxy
 # FLASK_ENV=production
 # FLASK_DEBUG=false
