--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,6 @@ services:
     build:
       context: .
       dockerfile: Dockerfile.backend
-    ports:
-      - "5001:5001"
     environment:
       - FLASK_ENV=production
       - FLASK_DEBUG=false
@@ -26,9 +24,9 @@ services:
       context: ./frontend
       dockerfile: Dockerfile
     ports:
-      - "3000:80"
+      - "60000:60000"
     environment:
-      - REACT_APP_API_URL=http://backend:5001
+      - PORT=60000
     depends_on:
       backend:
         condition: service_healthy
